--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://ma1VAR3.github.io/withtwojs",
+  "homepage": "http://withtwojs.github.io/",
   "name": "react-portfolio",
   "version": "0.1.0",
   "private": true,
